visible range correction

--- a/src/client/styles/scss/_on-edit.scss
+++ b/src/client/styles/scss/_on-edit.scss
@@ -27,7 +27,9 @@ body.on-edit {
 
   // show
   .d-edit-block {
-    display: block !important;
+    @include media-breakpoint-up(sm) {
+      display: block !important;
+    }
   }
 
   // hide unnecessary elements
